15 September 2025: Yorgos
	- Small debug output improvement when attaching an EDE.

11 September 2025: Wouter
	- version set to 1.24.0 for release.
	- tag for 1.24.0rc1.
	- Update contrib/aaaa-filter-iterator.patch so it applies on 1.24.0.

9 September 2025: Wouter
	- Fix #1332: CNAME chains are sometimes not followed when RPZs add a
	  local CNAME rewrite.

8 September 2025: Yorgos
	- Update documentation for using "SET ... EX" in Redis.
	- Document max buffer sizes for Redis commands.
	- Update man pages.

3 September 2025: Wouter
	- For #1328: make depend.

2 September 2025: Wouter
	- Fix #1235: Outdated Python2 code in
	  unbound/pythonmod/examples/log.py.
	- Fix #1324: Memory leak in 'msgparse.c' in
	  'parse_edns_options_from_query(...)'.
	- Fix indentation in tcp-mss option parsing.

1 September 2025: Wouter
	- Fix for #1324: Fix to free edns options scratch in ratelimit case.

29 August 2025: Yorgos
	- Limit the number of consecutive reads on an HTTP/2 session.
	  Thanks to Gal Bar Nahum for exposing the possibility of infinite
	  reads on the session.

28 August 2025: Wouter
	- Fix setup_listen_sslctx warning for nettle compile.

27 August 2025: Wouter
	- Fix unbound-control dump_cache for double unlock of lruhash table.

26 August 2025: Wouter
	- Fix ports workflow to install expat for macos.

22 August 2025: Wouter
	- For #1318: Fix compile warnings for DoH compile on windows.
	- Fix sha1 enable environment variable in test code on windows.
	- Fix #1319: [FR] zone status for Unbound auth-zones.
	- Fix that the zone acquired timestamp is set after the
	  zonefile is read.

21 August 2025: Wouter
	- Fix to check for extraneous command arguments for unbound-control,
	  when the command takes no arguments but there are arguments present.
	- Fix #1317: Unbound starts too early. Add
	  Wants=network-online.target under [Unit] in unbound.service.
	- Fix for #1317: Fix contrib/unbound.service comment path for
	  systemd network configuration.
